vote-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-ui
  namespace: vote-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-ui
  template:
    metadata:
      labels:
        app: vote-ui
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: vote-ui
          image: nginxinc/nginx-unprivileged:stable-alpine
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
