vote-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-ui
  namespace: vote-dev
spec:
  selector:
    app: vote-ui
  ports:
    - port: 8080
      targetPort: 8080
