vote-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vote-ui
  namespace: vote-dev
spec:
  to:
    kind: Service
    name: vote-ui
  port:
    targetPort: 8080
  tls:
    termination: edge
